--- a/less/header.less
+++ b/less/header.less
@@ -1,25 +1,19 @@
 .page-header{
     background: @main-background;
-    &__wrap{
-        text-align: center;    
+    &__wrap{   
     }
 }
 .logo{
-        height: 56px;
+        height: @height-logo;
         position: relative;
-        a{
+        &__link{
+            width: @width-logo;
+            height: 70px;
             display:block;
             position:absolute;
-            left:91px;
+            top:0px;
+            left:50%;
+            margin-left: -(@width-logo/2);
             z-index: 99;
-        }
-        &:before{
-            content:'';
-            position: absolute;
-            width: 23px;
-            height: 22px;
-            background: url('../img/sprites.png') -60px -15px no-repeat ;
-            top:17px;
-            right: 20px;
         }
 }
