--- a/less/menu.less
+++ b/less/menu.less
@@ -1,22 +1,12 @@
 .navigation{
     box-shadow: inset 10px 10px 0 0 rgba(0,0,0,0.9);
-    z-index: 99;
     .navigation__list{
        position:relative;
-        &:before{
-                content:'';
-                width: 23px;
-                height: 22px;
-                position: absolute;
-                background: url('../img/sprites.png') -15px -15px no-repeat ;
-                top:17px;
-                right: 20px;
-
-        }
         .navigation__item{/*высота в макете 55px*/
             display:block;
+            text-align: center;
             padding:8px 0;
-            background-color:@color;
+            background-color:@blue-color;
             box-shadow: inset 0 1px 0 0 rgba(256,256,256,0.2),
                         inset 0 -1px 0 0 rgba(100, 100, 100, 0.2);
                 -webkit-box-shadow: inset 0 1px 0 0 rgba(256,256,256,0.2),
@@ -25,4 +15,37 @@
                         inset 0 -1px 0 0 rgba(100, 100, 100, 0.2); 
         }
     }
+}
+.navigation__link{
+    color:@color-menu-link;
+    font-size: 18px;
+    line-height: 40px;
+}
+.menu-open{
+    position: relative;
+    display:block;
+    &:after{
+            content:'';
+            width: 23px;
+            height: 22px;
+            position: absolute;
+            background: url('../img/sprites.png') -60px -15px no-repeat ;
+            top:15px;
+            right: 20px;
+            z-index: 99;
+        }    
+}
+.menu-close{
+    position: relative;
+    display:block;
+    &:before{
+                content:'';
+                width: 23px;
+                height: 22px;
+                position: absolute;
+                background: url('../img/sprites.png') -15px -15px no-repeat ;
+                top:15px;
+                right: 20px;
+                z-index: 99;
+        }
 }
