--- a/less/typography.less
+++ b/less/typography.less
@@ -5,7 +5,7 @@
     url("../fonts/PTSansBold/PTSansBold.woff") format("woff"),
     url("../fonts/PTSansBold/PTSansBold.ttf") format("truetype");
     font-style: normal;
-    font-weight: normal;
+    font-weight: bold;
 }
 @font-face {
     font-family: "PTSansRegular";
@@ -21,33 +21,16 @@ body,html{
     font-size:14px; 
     font-family:"PTSansBold";
     color:@color-main-text;
-    font-weight: bold;
     text-transform: uppercase;
-    line-height: 1.4;
-    text-align: center;
 }
 
-h1{
+h1,h2{
     font-size: 18px;
+    line-height: 26px;
 }
-h2{
-    font-size: 18px;
-}
+
 p{
     font-family: "PTSansRegular";
-    line-height: 1.857;
-    padding-top:10px;
-}
-
-.navigation__link{
-    color:@color-menu-link;
-    font-size: 18px;
-    line-height: 2.2;
-}
-.offer__title{
-    font-size: 21px;
-}
-.offer__btn{
-    font-size: 21px;
-    color:@color-text;
+    font-size: 14px;
+    line-height: 26px;
 }
