--- a/less/main-index.less
+++ b/less/main-index.less
@@ -8,24 +8,21 @@
 }
 
 .card{ 
-    background:url('../img/background_for_main.jpg') no-repeat;
+    background:url('../img/background_for_main.jpg') 100% no-repeat;
     background-size: cover;
     text-align: center;
     padding: 46px 0px;
     position:relative;
     &__greeting{
         display:inline-block;
-        margin:0 auto;
         margin-bottom:60px;
     }
     &__main-logo{
         display:inline-block;
-        margin:0 auto;
-        margin-bottom:65px;
     }
     &__slogan{
+        margin-top:65px;
         display:inline-block;
-        margin:0 auto;
     }
     &:before{
         content:'';
