--- a/less/base.less
+++ b/less/base.less
@@ -17,3 +17,12 @@ a{
 img{
     vertical-align: bottom;
 }
+input{
+	outline:none;
+	border:none;
+}
+input[type="text"]:focus{
+	box-shadow: inset 0px 0px 1px 2px #b8b8b8;
+                -webkit-box-shadow: inset 0px 0px 1px 2px #b8b8b8;
+                -moz-box-shadow: inset 0px 0px 1px 2px #b8b8b8;
+}
