--- a/less/footer.less
+++ b/less/footer.less
@@ -5,19 +5,12 @@
     &__wrap{
         padding: 35px 20px;
     }
-    &__item{
-        text-align: center;
-    }
     &__link-hashtag{
         font-size: 21px;
         line-height: 26px;
         color:@color-link;
     }
     &__link-copyright{
-        font-size: 14px;
-        line-height: 26px;
-        font-family: "PTSansRegular";
-        color:@color-link;
         &:after{
             content:'';
             width:45px;
@@ -33,10 +26,10 @@
     &__item{
         width:45px;
         height:45px;
-        text-align: center;
         display:inline-block;
+        vertical-align:top;
         margin-left:5px;
-         &--tw{
+        &--tw{
             background:@blue-color url('../img/sprites.png') 5px -48px no-repeat ;
         }
         &--fb{
