--- a/less/main-form.less
+++ b/less/main-form.less
@@ -28,7 +28,7 @@
     }
     label{
         margin-left:20px;   
-        &::after{
+        &:not([for^="patronymic"])::after{
         content:'*';
         color:red;
         } 
@@ -38,7 +38,6 @@
         width:240px;
         padding:20px;
         background:#f2f2f2;
-        border:none;
         margin-bottom:20px;
         margin-top:10px;
         .font-title();
@@ -108,11 +107,9 @@
         width:240px;
         padding:20px;
         background:#f2f2f2;
-        border:none; 
         .font-title();  
     }
     input[id="date-end"]{
-        border:2px solid #b8b8b8;
         .font-title();
     }
     label{
@@ -138,13 +135,12 @@
     }
 }
 .quantity{
-    input[type="number"]{
+    input[type="text"]{
         width:108px;
         display:inline-block;
         background:#f2f2f2;
         padding:17px;
         vertical-align:middle;
-        border:none;
         margin:0 5px;
         .font-title();
     }
@@ -221,7 +217,7 @@
                 margin-bottom:10px;
                 .font-text();
             }
-            label::after{
+            label:not([for^="patronymic"])::after{
                 content:'*';
                 color:red;
             }   
@@ -229,7 +225,6 @@
                 width:170px;
                 padding:20px;
                 background:#f2f2f2;
-                border:none;
                 margin-bottom:20px;
                 .font-title();
                 &:last-of-type{
@@ -237,7 +232,7 @@
                 }
             }
     }
-    input[id="number-travel"]{
+    div[id="number-travel"]{
         padding:20px 25px;
         width:10px;
         background:#f2f2f2;
@@ -313,7 +308,16 @@
     &__title{
         text-align:center;
         margin:20px 0;
-
+    }
+    &__btn-download{
+        display:block;
+        margin-bottom:55px;
+        padding:20px 25px;
+        background:#f2f2f2;
+        color:#c4c4c4;
+        font-size:21px;
+        line-height:26px;
+        text-transform:uppercase;
     }
     &__item{
         display:inline-block;
@@ -339,11 +343,6 @@
     }
     &__item:nth-of-type(3n){
             margin-right:0px;
-    }
-    label{
-        display:block;
-        text-align:center;
-        margin-bottom:55px;
     }
     &__submit{
         display:block;
