--- a/less/style.less
+++ b/less/style.less
@@ -1,7 +1,7 @@
 @import url('variables.less');
 @import url('base.less');
 @import url('typography.less');
-@import url('impurities.less');
+@import url('mixins.less');
 @import url('header.less');
 @import url('menu.less');
 @import url('main-index.less');
