--- a/less/main-index.less
+++ b/less/main-index.less
@@ -1,12 +1,12 @@
 .container{
-    width: @width-mobile-content;
+    min-width: @width-mobile-content;
     background:@main-background;
     margin: 0 auto;
 }
 .main__wrap{}
 
 .card{ 
-    background:url('../img/background_for_main.jpg') 100% no-repeat;
+    background:url('../img/photo-background@1x.jpg') 100% 0% no-repeat;
     background-size: cover;
     text-align: center;
     padding: 46px 0px;
@@ -51,7 +51,6 @@
         padding:0 28px;
     }
     &__title{
-        width: 264px;
         margin-bottom: 25px;    
     }
     &:before{
@@ -169,7 +168,7 @@
 }
 
 .map{
-    width: 320px;
+    width: 100%;
     height: 350px;
     background: url('https://api-maps.yandex.ru/services/constructor/1.0/static/?sid=-TtMc0Ptg0qY-C9cVs2CgPiGa8rjC-3_&width=320&height=350&lang=ru_RU&sourceType=constructor') no-repeat;
 }
