--- a/less/media.less
+++ b/less/media.less
@@ -3,8 +3,7 @@
 		width:@width-tablet-content;
 	}
 	.navigation{
-		background:@main-background;
-		padding:0 3.9%;
+		padding:0;
 		&__list{
 			display:flex;
 			justify-content:space-between;
@@ -18,16 +17,20 @@
                 -moz-box-shadow:none;
 		}
 		&__item:nth-of-type(1){
-			order:3;
+			order:4;
 		}
 		&__item:nth-of-type(2){
 			order:1;
 		}
 		&__item:nth-of-type(3){
-			order:2;
+			display:block;
+			order:3;
 		}
 		&__item:nth-of-type(4){
-			order:4;
+			order:2;
+		}
+		&__item:nth-of-type(5){
+			order:5;
 		}
 		&__link{
 			.font-text();
@@ -43,18 +46,28 @@
 		position:static;
 	}
 	.card{
+		padding-top:50px;
+		padding-bottom:53px;
+		&__wrap{
+			width:456px;
+        	margin:0 auto;
+		}
 		&__geeting{
-			display:block;
-			margin:0 auto;
+			margin-top:25px;
+			margin-bottom:0;
+			width:256px;
+			height:86px;
 		}
 		&__main-logo{
-			display:block;
-			margin:0 auto;
+			margin-top:54px;
+			margin-bottom:57px;
+			width:456px;
+			height:76px;
 		}
 		&__slogan{
-			display:block;
-			margin:0 auto;
-			margin-top:8.4%;
+			margin-bottom:30px;
+			width:296px;
+			height:82px;
 		}
 	}
 	.description{
@@ -68,11 +81,11 @@
 	}
 	.reason{
 		display:flex;
+		height:256px;
 		&__wrap{
 			display:block;
 			padding:0px;
 			width:33%;
-			/*float:left;*/
 			&--change{
 				order:1;
 			}
@@ -89,23 +102,28 @@
 		&__image{
 			display:block;
 			width:67%;
-			/*float:right;*/
 		}
 	}
 
 	.advantages{
+		width:100%;
+		height:330px;
 		&__wrap{
-			padding:30px 0px;
+			padding:60px 0 67px 0;
 			display:flex;
+			justify-content:space-between;
+			align-items:flex-start;
 		}
 		&__description{
-			vertical-align:top;
 			width:33%;
 			&:first-of-type{
-				margin-top:0px;
+				margin-top:0;
 			}
 			&:nth-of-type(2){
 				order:3;
+			}
+			&:last-of-type{
+				margin-bottom:0;
 			}
 		}
 		&__image{
@@ -113,16 +131,21 @@
 			margin:0 auto;
 		}
 		&__title{
-			text-align:center;
 			display:block;
-			padding:0 40px;
-			width:70%;
+			width:165px;
+			margin:0 auto;
+			text-align:center;
+			h2{
+				font-size:21px;
+			}
+			p{
+				line-height:21px;
+			}
 		}
 	}
 	.features{
-		text-align:none;
 		&__wrap{
-			padding:0px;
+			padding:50px 0;
 			display:flex;
 			justify-content:space-between;
 		}
@@ -130,13 +153,19 @@
 			width:33%;
 			border:none;
 			padding:0;
-			display:flex;
 		}
 		&__header{
-			padding:0 19.5%;
+			/*padding:0 19.5%;*/
+			padding:0 50px;
 		}
 		&__title{
 			font-size:21px;
+			margin:0px;
+		}
+		&__descr-title{
+			margin-bottom: 0px;
+    		line-height: 21px;
+    		word-wrap: break-word;
 		}
 
 	}
@@ -150,16 +179,21 @@
 		}
 	}
 	.page-footer{
+		&__wrap{
+			padding:36px 20px;
+			display:flex;
+			justify-content:space-between;
+			align-items:center;
+		}
 		&__item{
-			display:inline-block;
-			vertical-align:middle;
 			width:33%;
+		}
+		&__dev{
+			margin:0;
 		}
 	}
 	.social-links{
-		display:inline-block;
 		padding:0px;
-		vertical-align:middle;
 		width:33%;
 	}
 }
