--- a/less/menu.less
+++ b/less/menu.less
@@ -12,6 +12,9 @@
                         inset 0 -1px 0 0 rgba(100, 100, 100, 0.2); 
                 -moz-box-shadow: inset 0 1px 0 0 rgba(256,256,256,0.2),
                         inset 0 -1px 0 0 rgba(100, 100, 100, 0.2); 
+            &:nth-of-type(3){
+                display:none;
+            }           
         }
     &__link{
     color:@color-menu-link;
