--- a/less/style.less
+++ b/less/style.less
@@ -7,4 +7,5 @@
 @import url('main-index.less');
 @import url('main-form.less');
 @import url('footer.less');
-@import url('media.less');
+@import url('media-index.less');
+@import url('media-form.less');
