Исправлены недочеты в шрифтах

--- a/less/media-index.less
+++ b/less/media-index.less
@@ -33,7 +33,8 @@
 			order:5;
 		}
 		&__link{
-			.font-text();
+			.font-title();
+			font-size:14px;
 			color:@color-link;
 		}
 	}
@@ -155,7 +156,6 @@
 			padding:0;
 		}
 		&__header{
-			/*padding:0 19.5%;*/
 			padding:0 50px;
 		}
 		&__title{
