Добавлены модальные окна для страницы form.html

--- a/less/media-form.less
+++ b/less/media-form.less
@@ -26,6 +26,7 @@
 		}
 	}
 	.form-review{
+		position:relative;
 		&__wrap{
 			padding:0 7.7%;
 		}
@@ -200,6 +201,7 @@
 		&__btn-download{
 			margin: 0 auto;
     		margin-bottom: 55px;
+    		width: 458px;
 		}
 		&__submit{
 			width:458px;
@@ -227,8 +229,8 @@
 				top: -30px;
     			margin-left: -30px;
     			left: 100%;
+				}
 			}
 		}
 	}
-}
 }
