Декстопная версия страницы index.html

--- a/less/variables.less
+++ b/less/variables.less
@@ -1,5 +1,6 @@
 @width-mobile-content: 320px;
 @width-tablet-content: 768px;
+@width-desktop-content: 1200px;
 @width-logo:138px;
 @height-logo:56px;
 @blue-color: rgba(129,179,210,1);
