--- a/less/footer.less
+++ b/less/footer.less
@@ -4,6 +4,10 @@
     text-align: center;
     &__wrap{
         padding: 35px 20px;
+        display:flex;
+        flex-direction:column;
+        justify-content:space-between;
+        align-items:center;
     }
     &__link-hashtag{
         font-size: 21px;
