--- a/less/main-index.less
+++ b/less/main-index.less
@@ -3,15 +3,13 @@
     background:@main-background;
     margin: 0 auto;
 }
-.main__wrap{}
-
 .card{ 
     background:url('../img/photo-background@1x.jpg') 100% 0% no-repeat;
     background-size: cover;
     text-align: center;
     padding-top:20px;
     padding-bottom:11px;
-
+    background-position:50% 50%;
     position:relative;
     &__wrap{
         width:280px;
@@ -57,13 +55,14 @@
 .description{
     position: relative;
     padding-top: 22px;
-    padding-bottom: 34px;
+    padding-bottom: 42px;
     text-align: center;
     &__wrap{
-        padding:0 28px;
+        padding:0 8.7%;
     }
     &__title{
-        margin-bottom: 25px;    
+        margin-top:16px;
+        margin-bottom: 27px;    
     }
     &:before{
         content:'';
@@ -91,8 +90,21 @@
         padding: 0px 20px;
     }
     &__header{
-       padding:27px 0px; 
+       padding:30px 0px; 
        color:@color-text;
+    }
+    &__title{
+        margin:10px 0;
+    }
+    &__number{
+        line-height:21px;
+        color:@color-text;
+    }
+    &__descr-title{
+        line-height:21px;
+        margin-top:15px;
+        margin-bottom:10px;
+        color:@color-text;
     }
     &__image{
         img{
@@ -105,17 +117,8 @@
 
 .advantages{
     &__wrap{
-        padding: 0px 20px;
-        padding-top: 30px;
+        padding: 27px 6.25% 37px 6.25%;
         position: relative;
-    }
-    &__description{
-        &:first-of-type{
-            margin-top:25px;
-        }
-        &:last-of-type{
-            margin-bottom: 25px;
-        }
     }
     &__image{
         width:40px;
@@ -127,7 +130,13 @@
         text-align:left;
         display: inline-block;
         width: 230px;
-        
+        h2{
+            margin:14px 0;
+        }
+        p{
+            line-height:21px;
+            margin-bottom:14px;
+        }
     }
 }
 .advantages__description:nth-of-type(1) .advantages__image{
@@ -144,20 +153,30 @@
     background:@color-reasons;
     text-align: center;
     &__wrap{
-        padding:0px 20px;
+        padding:0px 6.25%;
     }
     &__item{
-        padding: 15px;
+        padding: 15px 0;
         border-bottom: 1px solid #d6d6d6;
     }
     &__item:last-of-type{
         border-bottom: none;
     }
+    &__title{
+        margin-top:14px;
+        margin-bottom:10px;
+    }
+    &__number{
+        line-height:21px;
+    }
+    &__descr-title{
+        line-height:21px;
+        margin:14px 0;
+    }
 }
-
 .offer{
     &__wrap{
-        padding:0px 20px 45px 20px;
+        padding:0px 6.25% 45px 6.25%;
         text-align: center;
         margin-top:30px;
     }
@@ -175,7 +194,7 @@
         margin-top:40px;
         display:block;
         background: @blue-color;
-        padding:20px 10px;
+        padding:18px 10px;
         text-align: center;
     }
 }
