--- a/less/media-index.less
+++ b/less/media-index.less
@@ -5,7 +5,7 @@
 	.navigation{
 		padding:0;
 		&__list{
-			display:flex;
+			flex-direction:row;
 			justify-content:space-between;
 		}
 		&__item{
@@ -53,7 +53,7 @@
 			width:456px;
         	margin:0 auto;
 		}
-		&__geeting{
+		&__greting{
 			margin-top:25px;
 			margin-bottom:0;
 			width:256px;
@@ -73,11 +73,18 @@
 	}
 	.description{
 		&__title{
-			padding:0 150px;
+			width: 440px;
+    		margin: 0 auto;
+    		font-size: 21px;
+    		margin-top:40px;
 		}
 		&::before,
 		&::after{
 			border:none;
+		}
+		&__text{
+			margin-top:34px;
+			margin-bottom:20px;
 		}
 	}
 	.reason{
@@ -92,10 +99,16 @@
 			}
 		}
 		&__header{
-			padding:25px 45px 30px 45px;
+			padding:25px 19.4% 30px 19.4%;
 		}
 		&__title{
 			font-size:21px;
+			margin-top:20px;
+			margin-bottom:13px;
+		}
+		&__number{
+			margin-top:0;
+			margin-bottom:25px;
 		}
 		&__descr-title{
 			line-height:21px;
@@ -110,7 +123,7 @@
 		width:100%;
 		height:330px;
 		&__wrap{
-			padding:60px 0 67px 0;
+			padding: 55px 0 64px 0;
 			display:flex;
 			justify-content:space-between;
 			align-items:flex-start;
@@ -133,20 +146,23 @@
 		}
 		&__title{
 			display:block;
-			width:165px;
+			width: 64.4%;
 			margin:0 auto;
 			text-align:center;
 			h2{
 				font-size:21px;
+				margin-top:28px;
 			}
 			p{
 				line-height:21px;
+				margin-top:25px;
 			}
 		}
 	}
 	.features{
 		&__wrap{
-			padding:50px 0;
+			padding-top:42px;
+			padding-bottom:52px;
 			display:flex;
 			justify-content:space-between;
 		}
@@ -156,34 +172,38 @@
 			padding:0;
 		}
 		&__header{
-			padding:0 50px;
+			padding: 0 19.5%;
 		}
 		&__title{
 			font-size:21px;
-			margin:0px;
+			width:120px;
+			margin:0 auto;
 		}
 		&__descr-title{
-			margin-bottom: 0px;
-    		line-height: 21px;
+			margin-top:20px;
     		word-wrap: break-word;
 		}
 
 	}
 	.offer{
 		&__wrap{
-			padding:6.5% 20%;
-			margin-top:0px;
+			width: 458px;
+    		padding: 50px 0 60px 0;
+    		margin: 0 auto;
 		}
 		&__title{
-
+			margin:0px;
+			font-size:30px;
+		}
+		&__text{
+			margin-top:30px;
+			margin-bottom:45px;
 		}
 	}
 	.page-footer{
 		&__wrap{
 			padding:36px 20px;
-			display:flex;
-			justify-content:space-between;
-			align-items:center;
+			flex-direction:row;
 		}
 		&__item{
 			width:33%;
@@ -195,5 +215,37 @@
 	.social-links{
 		padding:0px;
 		width:33%;
+	}
+}
+@media (min-width:@width-desktop-content){
+	.container{
+		width:@width-desktop-content;
+	}
+	.reason{
+		&__header{
+			padding:35px 17.7% 40px 17.7%;
+		}
+		&__descr-title{
+			margin-bottom:20px;
+		}
+	}
+	.advantages{
+		.title{
+			p{
+				margin-bottom:20px;
+			}
+		}
+	}
+	.features{
+		&__header{
+			padding: 0 17.5%;
+		}
+	}
+	.offer{
+		&__wrap{
+			width: 458px;
+    		padding-bottom:70px;
+    		margin: 0 auto;
+		}
 	}
 }
