--- a/less/menu.less
+++ b/less/menu.less
@@ -1,9 +1,11 @@
 .navigation{
     position:relative;
-    &__list{}
+    &__list{
+        display:flex;
+        flex-direction:column;
+        justify-content:center;
+    }
     &__item{
-            display:block;
-            text-align: center;
             padding:8px 0;
             background-color:@blue-color;
             box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.2),
@@ -19,6 +21,7 @@
     &__link{
     color:@color-menu-link;
     display:block;
+    text-align:center;
     font-size: 18px;
     line-height: 40px;
 }
