--- a/less/modal-window.less
+++ b/less/modal-window.less
@@ -7,7 +7,7 @@
 @media (min-width:@width-tablet-content){
 	.error{
 		position:absolute;
-		display:block;
+		/*display:block;*/
 		width:400px;
 		height:347px;
 		left:50%;
@@ -48,7 +48,7 @@
 	}
 	.success{
 		position:absolute;
-		display:block;
+		/*display:block;*/
 		width:640px;
 		height:347px;
 		left:50%;
