--- a/less/media-form.less
+++ b/less/media-form.less
@@ -41,7 +41,7 @@
 		padding-bottom:70px;
 		&__wrap{
 		    padding: 0;
-		    display: flex;
+		    flex-direction: row;
 		    justify-content: space-between;
 		}
 		&__name{
@@ -66,10 +66,11 @@
 			.line-text();
 		}
 		&__list{
-			display: flex;
+			flex-direction: row;
     		margin-top: 46px;
     		margin-bottom:58px;
     		justify-content: space-between;
+    		align-items: stretch;
 		}
 		&__item{
 			width:41%;
@@ -87,7 +88,9 @@
 			.line-text();
 		}
 		&__period-travel{
-			display:flex;
+			flex-direction:row;
+			margin:0;
+			width:100%;
 			justify-content:space-between;
 		}
 		&__item{
@@ -126,16 +129,12 @@
 			.line-text();
 		}
 		.quantity{
-			width:31.1%;
 			label{
 				margin-left:0;
 				margin-top: 38px;
     			margin-bottom: 15px;
+    			text-align:center;
     			
-			}
-			&__control{
-				width:87.1%;
-				margin:0 auto;
 			}
 		}
 	}
@@ -146,15 +145,21 @@
 			padding:0;
 		}
 		&__item-person{
-			display:flex;
-			justify-content:space-between;
+			justify-content:flex-start;
 		}
 		&__person-name{
-			width:29.2%;
+			width:93%;
+			flex-direction: row;
 			input[type="text"]{
+				/*height: 58px;
 				box-sizing: border-box;
-				width:100%;
+				width:100%;*/
 			}
+		}
+		&__last-name,
+		&__first-name,
+		&__patronymic{
+			width:31.5%;
 		}
 	}
 	.attraction{
@@ -168,9 +173,9 @@
 			.line-text();
 		}
 		&__list{
-			display:flex;
-			justify-content:center;
+			flex-direction: row;
 			flex-wrap: wrap;
+			justify-content: space-around;
 			margin-top:45px;
 		}
 		&__item{
@@ -208,10 +213,10 @@
 		}
 	}
 	.images-block{
-		padding-left: 5.3%;
 	&__item{
 		width:140px;
 		margin-right:65px;
+		margin-left:0;
 		margin-bottom:35px;
 		img{
 			width:140px;
@@ -233,4 +238,57 @@
 			}
 		}
 	}
+}
+
+@media (min-width:@width-desktop-content){
+	.container{
+		min-width:@width-desktop-content;
+	}
+    .form-review{
+    	&__wrap{
+    		padding: 0 10%;
+    	}
+    }
+    .person-data{
+    	&__name{
+    		width:29%;
+    	}
+    }
+    .impression{
+    	&__list{
+    		justify-content: flex-end;
+    	}
+    }
+    .info-travel{
+    	&__item{
+    		width:29.1%;
+    	}
+    	quantity{
+    		
+    	}
+    }
+    .quantity{
+    	width:29.1%;
+    	&__input{
+    		margin:0 6px;
+    	}
+    }
+    .number-person{
+    	.quantity{
+    		margin-left:0;
+    	}
+    }
+    .attraction{
+    	&__list{
+    		justify-content: space-between;
+    	}
+    	&__item{
+    		width: 21%;
+    	}
+    }
+    .images-block{
+    &__item:nth-of-type(5n){
+		margin-right:0;
+	}
+    }
 }
