--- a/less/main-index.less
+++ b/less/main-index.less
@@ -1,7 +1,13 @@
+body{
+    background:#f2f2f2;
+}
 .container{
     min-width: @width-mobile-content;
     background:@main-background;
     margin: 0 auto;
+    box-shadow: 0px 0px 15px 5px rgba(0,1,1,0.2);
+            -webkit-box-shadow: 0px 0px 15px 5px rgba(0,1,1,0.2);
+            -moz-box-shadow: 0px 0px 15px 5px rgba(0,1,1,0.2);
 }
 .card{ 
     background:url('../img/photo-background@1x.jpg') 100% 0% no-repeat;
