--- a/less/modal-window.less
+++ b/less/modal-window.less
@@ -6,20 +6,17 @@
 }
 @media (min-width:@width-tablet-content){
 	.error{
-		position:absolute;
-		/*display:block;*/
+		position:relative;
+		display:block;
 		width:400px;
 		height:347px;
 		left:50%;
-		bottom: 412px;
+		bottom: 952px;
 		margin-left:-200px;
 		background:#ffffff;
-		box-shadow: 7px 7px 15px 0px rgba(0, 0, 0, 0.15),
-					-7px -7px 15px 0px rgba(0, 0, 0, 0.15);
-	            -webkit-box-shadow: 7px 7px 15px 0px rgba(0, 0, 0, 0.15),
-					-7px -7px 15px 0px rgba(0, 0, 0, 0.15); 
-	            -moz-box-shadow: 7px 7px 15px 0px rgba(0, 0, 0, 0.15),
-					-7px -7px 15px 0px rgba(0, 0, 0, 0.15); 
+		box-shadow: 0px 0px 15px 7px rgba(0, 0, 0, 0.15);
+	            -webkit-box-shadow: 0px 0px 15px 7px rgba(0, 0, 0, 0.15);
+	            -moz-box-shadow: 0px 0px 15px 7px rgba(0, 0, 0, 0.15); 
 		z-index:5;
 		&__wrap{
 			padding:40px 15% 49px 15%;
@@ -47,23 +44,20 @@
 		}
 	}
 	.success{
-		position:absolute;
-		/*display:block;*/
+		position:relative;
+		display:block;
 		width:640px;
 		height:347px;
 		left:50%;
-		bottom: -65px;
+		bottom: 850px;
 		margin-left:-320px;
 		background:#ffffff;
-		box-shadow: 7px 7px 15px 0px rgba(0, 0, 0, 0.15),
-					-7px -7px 15px 0px rgba(0, 0, 0, 0.15);
-	            -webkit-box-shadow: 7px 7px 15px 0px rgba(0, 0, 0, 0.15),
-					-7px -7px 15px 0px rgba(0, 0, 0, 0.15); 
-	            -moz-box-shadow: 7px 7px 15px 0px rgba(0, 0, 0, 0.15),
-					-7px -7px 15px 0px rgba(0, 0, 0, 0.15); 
+		box-shadow: 0px 0px 15px 7px rgba(0, 0, 0, 0.15);
+	            -webkit-box-shadow: 0px 0px 15px 7px rgba(0, 0, 0, 0.15);
+	            -moz-box-shadow:0px 0px 15px 7px rgba(0, 0, 0, 0.15); 
 		z-index:5;
 		&__wrap{
-			padding:40px 14.21% 0px 14.21%;
+			padding:42px 14.21% 0px 14.21%;
 			margin-bottom:32px;
 		}
 		&__title{
@@ -71,13 +65,13 @@
 			font-size:30px;
 			line-height:40px;
 			margin-top:15px;
-			margin-bottom:25px;
+			margin-bottom:26px;
 		}
 		&__text{
 			line-height:24px;
 		}
 		&__btn{
-			padding: 44px 14.21%;
+			padding: 45px 14.21%;
 			background:#f2f2f2;
 				a{
 				display: block;
