--- a/less/mixins.less
+++ b/less/mixins.less
@@ -27,3 +27,15 @@
 		font-size:21px;
 	}
 }
+.btn{
+	&:hover{
+		background:rgba(102,158,192,1);
+	}
+	&:active{
+		background:rgba(84,150,189,1);
+		color:rgba(148,185,210,1);
+	}
+	&:disabled{
+		background:rgba(229,229,229,1);
+	}
+}
