--- a/less/base.less
+++ b/less/base.less
@@ -20,8 +20,16 @@ input{
 	outline:none;
 	border:none;
 }
-input[type="text"]:focus{
-	box-shadow: inset 0px 0px 1px 2px #b8b8b8;
+input[type="text"]{
+    background:#f2f2f2;
+    &:active,
+    &:focus{
+        background:rgba(255,255,255,1);
+	    box-shadow: inset 0px 0px 1px 2px #b8b8b8;
                 -webkit-box-shadow: inset 0px 0px 1px 2px #b8b8b8;
                 -moz-box-shadow: inset 0px 0px 1px 2px #b8b8b8;
+    }
+    &:hover{
+        background: rgba(229,229,229,1);
+    }
 }
