--- a/less/menu.less
+++ b/less/menu.less
@@ -16,7 +16,14 @@
                         inset 0 -1px 0 0 rgba(100, 100, 100, 0.2); 
             &:nth-of-type(3){
                 display:none;
-            }           
+            }
+            &:hover{
+                background:rgba(102,158,192,1);
+            }
+            &:active{
+                background:rgba(84,150,189,1);
+                color:rgba(148,185,210,1);
+            }       
         }
     &__link{
     color:@color-menu-link;
@@ -24,7 +31,7 @@
     text-align:center;
     font-size: 18px;
     line-height: 40px;
-}
+    }
 }
 .menu-open{
     display:block;
