--- a/less/modal-window.less
+++ b/less/modal-window.less
@@ -41,6 +41,7 @@
 		    line-height: 26px;
 	    	color: @color-text;
 	    	background:@blue-color;
+	    	.btn();
 		}
 	}
 	.success{
@@ -81,6 +82,7 @@
 			    line-height: 26px;
 		    	color: @color-text;
 		    	background:@blue-color;
+		    	.btn();
 			}
 		}
 	}
