Svg картинки для блока преимущества

--- a/less/main-index.less
+++ b/less/main-index.less
@@ -107,9 +107,10 @@ body{
     }
     &__image{
         width:40px;
-        height: 50px;
+        height: 40px;
         display:inline-block;
         vertical-align: top;
+        fill:@blue-color;
     }
     &__title{
         text-align:left;
@@ -123,15 +124,6 @@ body{
             margin-bottom:14px;
         }
     }
-}
-.advantages__description:nth-of-type(1) .advantages__image{
-    background: url('../img/sprites.png') -104px 5px no-repeat ;
-    }
-.advantages__description:nth-of-type(2) .advantages__image{
-    background: url('../img/sprites.png') -154px 5px no-repeat ; 
-}
-.advantages__description:nth-of-type(3) .advantages__image{
-        background: url('../img/sprites.png') -205px 5px no-repeat ;
 }
 
 .features{
