--- a/less/media-index.less
+++ b/less/media-index.less
@@ -167,6 +167,8 @@
 		&__image{
 			display:block;
 			margin:0 auto;
+			width: 76px;
+    		height: 73px;
 		}
 		&__title{
 			display:block;
@@ -265,7 +267,7 @@
 		}
 	}
 	.advantages{
-		.title{
+		&__title{
 			p{
 				margin-bottom:20px;
 			}
