--- a/less/main-form.less
+++ b/less/main-form.less
@@ -380,52 +380,52 @@
     }
 
     #checkbox-1:checked ~ label[for="checkbox-1"]::before{
-        background:#f2f2f2 url('../img/sprites.png') -212px -63px no-repeat;
+        background:#f2f2f2 url('../img/checkbox.png') no-repeat;
         vertical-align: middle;
     }
     #checkbox-1:checked ~ label[for="checkbox-1"]:hover:before{
                 border: 15px solid rgba(229,229,229,1);
-                fill:rgba(51,51,51,1);
+                background:rgba(229,229,229,1) url('../img/checkbox.png') no-repeat;
     }
     #checkbox-1:checked ~ label[for="checkbox-1"]:active:before{
                 border: 15px solid rgba(213,213,213,1);
-                fill:rgba(164,164,164,1);
+                background:rgba(213,213,213,1) url('../img/checkbox-down.png') no-repeat;
     }
     #checkbox-2:checked ~ label[for="checkbox-2"]::before{
-        background:#f2f2f2 url('../img/sprites.png') -212px -63px no-repeat;
-        vertical-align: middle;
+                background:#f2f2f2 url('../img/checkbox.png') no-repeat;
+                vertical-align: middle;
     }
     #checkbox-2:checked ~ label[for="checkbox-2"]:hover:before{
                 border: 15px solid rgba(229,229,229,1);
-                fill:rgba(51,51,51,1);
+                background:rgba(229,229,229,1) url('../img/checkbox.png') no-repeat;
     }
     #checkbox-2:checked ~ label[for="checkbox-2"]:active:before{
                 border: 15px solid rgba(213,213,213,1);
-                fill:rgba(164,164,164,1);
+                background:rgba(213,213,213,1) url('../img/checkbox-down.png') no-repeat;
     }
     #checkbox-3:checked ~ label[for="checkbox-3"]::before{
-        background:#f2f2f2 url('../img/sprites.png') -212px -63px no-repeat;
-        vertical-align: middle;
+                background:#f2f2f2 url('../img/checkbox.png') no-repeat;
+                vertical-align: middle;
     }
     #checkbox-3:checked ~ label[for="checkbox-3"]:hover:before{
                 border: 15px solid rgba(229,229,229,1);
-                fill:rgba(51,51,51,1);
+                background:rgba(229,229,229,1) url('../img/checkbox.png') no-repeat;
     }
     #checkbox-3:checked ~ label[for="checkbox-3"]:active:before{
                 border: 15px solid rgba(213,213,213,1);
-                fill:rgba(164,164,164,1);
+                background:rgba(213,213,213,1) url('../img/checkbox-down.png') no-repeat;
     }
     #checkbox-4:checked ~ label[for="checkbox-4"]::before{
-        background:#f2f2f2 url('../img/sprites.png') -212px -63px no-repeat;
+        background:#f2f2f2 url('../img/checkbox.png') no-repeat;
         vertical-align: middle;
     }
     #checkbox-4:checked ~ label[for="checkbox-4"]:hover:before{
                 border: 15px solid rgba(229,229,229,1);
-                fill:rgba(51,51,51,1);
+                background:rgba(229,229,229,1) url('../img/checkbox.png') no-repeat;
     }
     #checkbox-4:checked ~ label[for="checkbox-4"]:active:before{
                 border: 15px solid rgba(213,213,213,1);
-                fill:rgba(164,164,164,1);
+                background:rgba(213,213,213,1) url('../img/checkbox-down.png') no-repeat;
     }
 }
 
